# NFL-Prediction-App

./: .gitignore  EXPERIMENTS.md  LICENSE  README.md  lamar-jackson-stats-2025.csv  main.py  pyproject.toml
.github/scripts/: find-main-run.js  post-metrics-comment.js
.github/workflows/: ci.yml
scripts/: tune_lgbm.py
src/: build_model.py  data.py  features.py  train.py
tests/: test_build_model.py  test_data.py  test_features.py
